--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
-        "build": "tsc --build",
+        "build": "rollup -c",
+        "dev": "rollup -cw",
         "prepublishOnly": "pnpm run lint && pnpm run test && pnpm run build",
         "test": "ts-mocha test/**/*.ts",
         "lint": "eslint {src,test}/**/*.ts --quiet",
@@ -16,12 +17,20 @@
         "typescript",
         "node"
     ],
+    "alias": {
+        "react": "preact/compat",
+        "react-dom": "preact/compat"
+    },
     "author": "Theo Paris",
     "license": "UNLICENSE",
     "devDependencies": {
+        "@rollup/plugin-commonjs": "^17.1.0",
+        "@rollup/plugin-image": "^2.0.6",
+        "@rollup/plugin-node-resolve": "^11.2.0",
         "@types/chai": "4.2.15",
         "@types/mocha": "8.2.1",
         "@types/node": "14.14.22",
+        "@types/react-router-dom": "^5.1.7",
         "@typescript-eslint/eslint-plugin": "4.15.1",
         "@typescript-eslint/parser": "4.15.1",
         "chai": "4.3.0",
@@ -31,7 +40,26 @@
         "mocha": "8.3.0",
         "nyc": "15.1.0",
         "prettier": "2.2.1",
+        "rollup": "^2.40.0",
+        "sirv": "^1.0.11",
+        "sirv-cli": "^1.0.11",
         "ts-mocha": "8.0.0",
         "typescript": "4.1.5"
+    },
+    "dependencies": {
+        "@chakra-ui/icons": "^1.0.5",
+        "@chakra-ui/react": "^1.3.3",
+        "@emotion/react": "^11.1.5",
+        "@emotion/styled": "^11.1.5",
+        "@rollup/plugin-alias": "^3.1.2",
+        "@rollup/plugin-html": "^0.2.3",
+        "@rollup/plugin-replace": "^2.4.1",
+        "@rollup/plugin-typescript": "^8.2.0",
+        "acorn-jsx": "^5.3.1",
+        "framer-motion": "^3.7.0",
+        "preact": "^10.5.12",
+        "react-feather": "^2.0.9",
+        "react-router-dom": "^5.2.0",
+        "rollup-plugin-serve": "^1.1.0"
     }
 }
