--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "target": "ES2019",
-        "module": "CommonJS",
+        "module": "esnext",
         "moduleResolution": "Node",
         "skipLibCheck": true,
         "resolveJsonModule": true,
@@ -10,7 +10,9 @@
         "experimentalDecorators": true,
         "allowSyntheticDefaultImports": true,
         "declaration": false,
-        "outDir": "dist"
+        "removeComments": true,
+        "jsx": "react",
+        "jsxFactory": "h"
     },
     "include": ["src"],
     "exclude": ["node_modules", "test/**/*.ts"]
