--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "types": "dist/index.d.ts",
     "scripts": {
         "build": "rollup -c",
-        "dev": "rollup -cw",
+        "dev": "cross-env SERVE=true rollup -cw",
         "prepublishOnly": "pnpm run lint && pnpm run test && pnpm run build",
         "test": "ts-mocha test/**/*.ts",
         "lint": "eslint {src,test}/**/*.ts --quiet",
@@ -34,6 +34,7 @@
         "@typescript-eslint/eslint-plugin": "4.15.1",
         "@typescript-eslint/parser": "4.15.1",
         "chai": "4.3.0",
+        "cross-env": "^7.0.3",
         "eslint": "7.21.0",
         "eslint-config-prettier": "8.0.0",
         "eslint-plugin-prettier": "3.3.1",
